<resources>
    <string name="app_name">Driving Guide</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_about">About Us</string>
    <string name="action_rate">Rate Me</string>
    <string name="action_report">Report a bug</string>
    <string name="action_email">Email Me</string>
    <string name="action_references">References</string>
    <string name="action_tell">Share this app</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_tutorials">TUTORIALS</string>
    <string name="title_activity_signrules">SIGN RULES</string>
    <string name="title_activity_places">PLACES</string>
    <string name="title_activity_Guide">GUIDE</string>
    <string name="title_activity_Safety_Guide">SAFETY GUIDE</string>
    <string name="title_activity_trafficupdate">PLACES</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_prayer">Driving Guide</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_share">Share</string>
    <string name="developers_name">Ayodele Oluwaseyi</string>
    <string name="details">This Driving guide app is a manual to help new and experienced drivers learn the rules of the road and learn the signs on the roads and will prepare the user for the driving skills test the user has been required to take, also to prepare the user to learn and reinforce the user safe and defensive driving techniques.</string>
    <string name="sugestions">For complains and suggestions </string>
    <string name="email">oluwaseyiayodele18@gmail.com</string>
    <string name="bbm">52C3CF14</string>
    <string name="sign">Signs</string>
    <string name="traffic_light_signal">TRAFFIC LIGHT SIGNAL</string>
    <string name="traffic_light_signs">TRAFFIC LIGHT SIGNS</string>
    <string name="prohibitory_signs">PROHIBITORY SIGNS</string>
    <string name="regualtory_signs">REGULATORY SIGNS</string>
    <string name="information_signs">INFORMATION SIGNS</string>
    <string name="warning_signs">WARNINGS SIGNS</string>
    <string name="pedestrian">GRREN LIGHT means pedestrian may go</string>
    <string name="red">RED means stop. Wait behind the stop line on thecarriage way</string>
    <string name="green">GREEN means you may go if the way is clear.</string>
    <string name="yellow">AMBER means stop at the stop line. You may only go if the Amber appears after you have crossed the stop line</string>
    <string name="whatsap">+2348130706942</string>
    <string name="copyright">© Fransunisoft.com 2016. All rights reserved</string>
    <string name="version">Driving Guide v1.1</string>
    <string name="sign_description">Familarity with symbols on road signs is important for every road user in order to maintain safety...</string>
    <string name="title_activity_traffic_signs">Traffic Signs</string>
    <string name="title_activity_regulatory_sign">Regulatory Signs</string>
    <string name="title_activity_prohibitory_signs">Prohibitory Signs</string>
    <string name="title_activity_information_signs">Information Signs</string>
    <string name="title_activity_traffic_light">Traffic Lights</string>
    <string name="title_activity_warning_signs">Warning Signs</string>
    <string name="title_activity_splash">SplashActivity</string>


    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-6019962761675886/7615792451</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_tuts">Tuts</string>


</resources>