<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="6dp"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    android:paddingTop="6dp"
    android:background="#c5cae9"
    tools:context="com.fransunisoft.drivingguide.About">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#c5cae9"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/txtPrayerIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:maxHeight="300dip"
            android:maxWidth="250dip"
            android:src="@drawable/guide2"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#039be5"
            android:id="@+id/cardabout"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="5dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:id="@+id/tvappTittle"
                android:textColor="@color/primary_light"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"

                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#039be5"
            android:id="@+id/card1"
            android:layout_marginTop="10dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="5dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Developed and Designed By:"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp"
                android:id="@+id/manualtittle"
                android:textColor="@color/primary_light" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers_name"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp"
                android:id="@+id/manualbody"
                android:textColor="@color/primary_light" /> />

        </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="bottom"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:id="@+id/card2"
            android:background="#039be5"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/details"
                android:id="@+id/tvManual"
                android:layout_gravity="center"
                android:textColor="@color/secondary_text"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                />
        </android.support.v7.widget.CardView>

    </LinearLayout>
    </ScrollView>