<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="6dp"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    android:paddingTop="6dp"
    android:background="#c5cae9"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.fransunisoft.drivingguide.signs.TrafficLight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#039be5"
        android:id="@+id/lightcard1"
        card_view:contentPadding="10dp"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:src="@drawable/light5"
                android:scaleType="fitXY"/>


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_description"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="10dp"
                android:id="@+id/lightbody1"
                android:textColor="@color/primary_light" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#039be5"
            android:id="@+id/lightcard2"
            card_view:contentPadding="10dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="5dp"
            android:layout_below="@+id/lightcard1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/light1"
                    android:scaleType="fitXY"
                     />


                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/lightbody2"
                    android:textColor="@color/primary_light" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#039be5"
            android:id="@+id/lightcard3"
            card_view:contentPadding="10dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="5dp"
            android:layout_below="@+id/lightcard2"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/light2"
                    android:scaleType="fitXY"/>


                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/lightbody"
                    android:textColor="@color/primary_light" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#039be5"
            android:id="@+id/lightcard4"
            card_view:contentPadding="10dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="5dp"
            android:layout_below="@+id/lightcard3"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/light3"
                    android:scaleType="fitXY"/>


                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/lightbody4"
                    android:textColor="@color/primary_light" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#039be5"
            android:id="@+id/lightcard5"
            card_view:contentPadding="10dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="5dp"
            android:layout_below="@+id/lightcard4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/light4"
                    android:scaleType="fitXY"/>


                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pedestrian"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/lightbody5"
                    android:textColor="@color/primary_light" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
